Finished board styling

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,36 @@
 extends layout
 
-block content
-  h1= title
-  p Hello, world!
+block board
+	div.board
+		ul.bottom
+			each tile, key in bottomTiles
+				li(class="#{key == 0 ? 'bottom_left ' + tile.type : key == (bottomTiles.length - 1) ? 'bottom_right ' + tile.type : tile.type}", id="#{tile.machine_name}")
+					span.colour(class="#{tile.colour != null ? tile.colour : tile.type}")
+					div.content						
+						span.title #{tile.name}
+						if tile.price != 0
+							span.price £#{tile.price}
+		ul.left
+			each tile, key in leftTiles
+				li(class="#{tile.type}", id="#{tile.machine_name}", id="#{tile.machine_name}")
+					span.colour(class="#{tile.colour != null ? tile.colour : tile.type}", id="#{tile.machine_name}")
+					div.content						
+						span.title #{tile.name}
+						if tile.price != 0
+							span.price £#{tile.price}
+		ul.top
+			each tile, key in topTiles
+				li(class="#{key == 0 ? 'top_left ' + tile.type : key == (topTiles.length - 1) ? 'top_right ' + tile.type : tile.type}", id="#{tile.machine_name}")
+					span.colour(class="#{tile.colour != null ? tile.colour : tile.type}")
+					div.content						
+						span.title #{tile.name}
+						if tile.price != 0
+							span.price £#{tile.price}
+		ul.right
+			each tile, key in rightTiles
+				li(class="#{tile.type}", id="#{tile.machine_name}")
+					span.colour(class="#{tile.colour != null ? tile.colour : tile.type}")
+					div.content
+						span.title #{tile.name}
+						if tile.price != 0
+							span.price £#{tile.price}
