--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -1,5 +1,612 @@
-/* line 1, ../scss/screen.scss */
+/* normalize.css v2.1.3 | MIT License | git.io/normalize */
+/* normalize.scss v2.1.3 | MIT/GPLv2 License | bit.ly/normalize-with-compass */
+/* ==========================================================================
+   HTML5 display definitions
+   ========================================================================== */
+/**
+ * Correct `block` display not defined in IE 8/9.
+ */
+/* line 66, ../scss/_normalize.scss */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section,
+summary {
+  display: block;
+}
+
+/**
+ * Correct `inline-block` display not defined in IE 8/9.
+ */
+/* line 76, ../scss/_normalize.scss */
+audio,
+canvas,
+video {
+  display: inline-block;
+}
+
+/**
+ * Prevent modern browsers from displaying `audio` without controls.
+ * Remove excess height in iOS 5 devices.
+ */
+/* line 89, ../scss/_normalize.scss */
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+/**
+ * Address `[hidden]` styling not present in IE 8/9.
+ * Hide the `template` element in IE, Safari, and Firefox < 22.
+ */
+/* line 100, ../scss/_normalize.scss */
+[hidden],
+template {
+  display: none;
+}
+
+/* ==========================================================================
+   Base
+   ========================================================================== */
+/**
+ * 1. Set default font family to sans-serif.
+ * 2. Prevent iOS text size adjust after orientation change, without disabling
+ *    user zoom.
+ * 3. Correct text resizing oddly in IE 6/7 when body `font-size` is set using
+ *    `em` units.
+ */
+/* line 116, ../scss/_normalize.scss */
+html {
+  font-family: sans-serif;
+  /* 1 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+}
+
+/**
+ * Remove default margin.
+ */
+/* line 148, ../scss/_normalize.scss */
 body {
+  margin: 0;
+}
+
+/* ==========================================================================
+   Links
+   ========================================================================== */
+/**
+ * Remove the gray background color from active links in IE 10.
+ */
+/* line 160, ../scss/_normalize.scss */
+a {
+  background: transparent;
+}
+
+/**
+ * Address `outline` inconsistency between Chrome and other browsers.
+ */
+/* line 168, ../scss/_normalize.scss */
+a:focus {
+  outline: thin dotted;
+}
+
+/**
+ * Improve readability when focused and also mouse hovered in all browsers.
+ */
+/* line 177, ../scss/_normalize.scss */
+a:active,
+a:hover {
+  outline: 0;
+}
+
+/* ==========================================================================
+   Typography
+   ========================================================================== */
+/**
+ * Address variable `h1` font-size and margin within `section` and `article`
+ * contexts in Firefox 4+, Safari 5, and Chrome.
+ */
+/* line 206, ../scss/_normalize.scss */
+h1 {
+  /* Set the font-size and line-height while keeping a proper vertical rhythm. */
+  font-size: 2em;
+  /* Set 1 unit of vertical rhythm on the top and bottom margins. */
+  margin-top: 0.75em;
+  margin-bottom: 0.75em;
+}
+
+/**
+ * Address styling not present in IE 8/9, Safari 5, and Chrome.
+ */
+/* line 256, ../scss/_normalize.scss */
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+
+/**
+ * Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
+ */
+/* line 265, ../scss/_normalize.scss */
+b,
+strong {
+  font-weight: bold;
+}
+
+/**
+ * Address styling not present in Safari 5 and Chrome.
+ */
+/* line 273, ../scss/_normalize.scss */
+dfn {
+  font-style: italic;
+}
+
+/**
+ * Address differences between Firefox and other browsers.
+ */
+/* line 281, ../scss/_normalize.scss */
+hr {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0;
+}
+
+/**
+ * Address styling not present in IE 8/9.
+ */
+/* line 290, ../scss/_normalize.scss */
+mark {
+  background: #ff0;
+  color: #000;
+}
+
+/**
+ * Correct font family set oddly in Safari 5 and Chrome.
+ */
+/* line 302, ../scss/_normalize.scss */
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, serif;
+  font-size: 1em;
+}
+
+/**
+ * Improve readability of pre-formatted text in all browsers.
+ */
+/* line 319, ../scss/_normalize.scss */
+pre {
+  white-space: pre-wrap;
+}
+
+/**
+ * Set consistent quote types.
+ */
+/* line 334, ../scss/_normalize.scss */
+q {
+  quotes: "\201C" "\201D" "\2018" "\2019";
+}
+
+/**
+ * Address inconsistent and variable font size in all browsers.
+ */
+/* line 342, ../scss/_normalize.scss */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` affecting `line-height` in all browsers.
+ */
+/* line 351, ../scss/_normalize.scss */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+/* line 358, ../scss/_normalize.scss */
+sup {
+  top: -0.5em;
+}
+
+/* line 362, ../scss/_normalize.scss */
+sub {
+  bottom: -0.25em;
+}
+
+/* ==========================================================================
+   Lists
+   ========================================================================== */
+/* ==========================================================================
+   Embedded content
+   ========================================================================== */
+/**
+ * Remove border when inside `a` element in IE 8/9.
+ */
+/* line 427, ../scss/_normalize.scss */
+img {
+  border: 0;
+}
+
+/**
+ * Correct overflow displayed oddly in IE 9.
+ */
+/* line 439, ../scss/_normalize.scss */
+svg:not(:root) {
+  overflow: hidden;
+}
+
+/* ==========================================================================
+   Figures
+   ========================================================================== */
+/**
+ * Address margin not present in IE 8/9 and Safari 5.
+ */
+/* line 451, ../scss/_normalize.scss */
+figure {
+  margin: 0;
+}
+
+/* ==========================================================================
+   Forms
+   ========================================================================== */
+/**
+ * Define consistent border, margin, and padding.
+ */
+/* line 473, ../scss/_normalize.scss */
+fieldset {
+  margin: 0 2px;
+  /* Apply borders and padding that keep the vertical rhythm. */
+  border-color: #c0c0c0;
+  border-top-style: solid;
+  border-top-width: 0.0625em;
+  padding-top: 0.4625em;
+  border-bottom-style: solid;
+  border-bottom-width: 0.0625em;
+  padding-bottom: 0.9125em;
+  border-left-style: solid;
+  border-left-width: 0.0625em;
+  padding-left: 0.875em;
+  border-right-style: solid;
+  border-right-width: 0.0625em;
+  padding-right: 0.875em;
+}
+
+/**
+ * 1. Correct `color` not being inherited in IE 8/9.
+ * 2. Remove padding so people aren't caught out if they zero out fieldsets.
+ * 3. Correct alignment displayed oddly in IE 6/7.
+ */
+/* line 489, ../scss/_normalize.scss */
+legend {
+  border: 0;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+/**
+ * 1. Correct font family not being inherited in all browsers.
+ * 2. Correct font size not being inherited in all browsers.
+ * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
+ * 4. Improve appearance and consistency with IE 6/7.
+ */
+/* line 507, ../scss/_normalize.scss */
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 2 */
+  margin: 0;
+  /* 3 */
+}
+
+/**
+ * Address Firefox 4+ setting `line-height` on `input` using `!important` in
+ * the UA stylesheet.
+ */
+/* line 523, ../scss/_normalize.scss */
+button,
+input {
+  line-height: normal;
+}
+
+/**
+ * Address inconsistent `text-transform` inheritance for `button` and `select`.
+ * All other form control elements do not inherit `text-transform` values.
+ * Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
+ * Correct `select` style inheritance in Firefox 4+ and Opera.
+ */
+/* line 535, ../scss/_normalize.scss */
+button,
+select {
+  text-transform: none;
+}
+
+/**
+ * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
+ *    and `video` controls.
+ * 2. Correct inability to style clickable `input` types in iOS.
+ * 3. Improve usability and consistency of cursor style between image-type
+ *    `input` and others.
+ * 4. Remove inner spacing in IE 7 without affecting normal text inputs.
+ *    Known issue: inner spacing remains in IE 6.
+ */
+/* line 552, ../scss/_normalize.scss */
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  /* 2 */
+  cursor: pointer;
+  /* 3 */
+}
+
+/**
+ * Re-set default cursor for disabled elements.
+ */
+/* line 565, ../scss/_normalize.scss */
+button[disabled],
+html input[disabled] {
+  cursor: default;
+}
+
+/**
+ * 1. Address box sizing set to `content-box` in IE 8/9/10.
+ * 2. Remove excess padding in IE 8/9/10.
+ * 3. Remove excess padding in IE 7.
+ *    Known issue: excess padding remains in IE 6.
+ */
+/* line 577, ../scss/_normalize.scss */
+input[type="checkbox"],
+input[type="radio"] {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+/**
+ * 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome.
+ * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
+ *    (include `-moz` to future-proof).
+ */
+/* line 592, ../scss/_normalize.scss */
+input[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  /* 2 */
+}
+
+/**
+ * Remove inner padding and search cancel button in Safari 5 and Chrome
+ * on OS X.
+ */
+/* line 603, ../scss/_normalize.scss */
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * Remove inner padding and border in Firefox 4+.
+ */
+/* line 612, ../scss/_normalize.scss */
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+/**
+ * 1. Remove default vertical scrollbar in IE 8/9.
+ * 2. Improve readability and alignment in all browsers.
+ */
+/* line 622, ../scss/_normalize.scss */
+textarea {
+  overflow: auto;
+  /* 1 */
+  vertical-align: top;
+  /* 2 */
+}
+
+/* ==========================================================================
+   Tables
+   ========================================================================== */
+/**
+ * Remove most spacing between table cells.
+ */
+/* line 635, ../scss/_normalize.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* line 1, ../scss/_elements.scss */
+body {
+  padding: 0;
+  margin: 0;
   background-color: #fff;
-  color: #333;
+}
+/* line 6, ../scss/_elements.scss */
+body ul {
+  margin: 0;
+  padding: 0;
+}
+/* line 10, ../scss/_elements.scss */
+body ul li {
+  margin: 0;
+  padding: 0;
+}
+
+/* line 1, ../scss/_modules/_board.scss */
+div.board {
+  position: relative;
+  height: 698px;
+  width: 682px;
+  margin: 20px auto;
+}
+/* line 7, ../scss/_modules/_board.scss */
+div.board ul {
+  list-style-type: none;
+  display: block;
+}
+/* line 11, ../scss/_modules/_board.scss */
+div.board ul li {
+  display: block;
+  float: left;
+  border: 1px solid #000;
+  font-size: 65%;
+  text-align: center;
+  word-wrap: break-word;
+  width: 60px;
+  max-width: 60px;
+  max_height: 68px;
+  height: 68px;
+}
+/* line 23, ../scss/_modules/_board.scss */
+div.board ul li span.colour {
+  width: 100%;
+  height: 10px;
+  display: block;
+  border-bottom: 1px solid #000;
+  margin-bottom: 5px;
+}
+/* line 37, ../scss/_modules/_board.scss */
+div.board ul li span.colour.jail, div.board ul li span.colour.chance, div.board ul li span.colour.tax, div.board ul li span.colour.community_chest, div.board ul li span.colour.go, div.board ul li span.colour.free_parking, div.board ul li span.colour.go_to_jail, div.board ul li span.colour.black {
+  display: none;
+}
+/* line 41, ../scss/_modules/_board.scss */
+div.board ul li span.colour.sky_blue {
+  background-color: skyblue;
+}
+/* line 45, ../scss/_modules/_board.scss */
+div.board ul li span.colour.brown {
+  background-color: saddlebrown;
+}
+/* line 49, ../scss/_modules/_board.scss */
+div.board ul li span.colour.orange {
+  background-color: orange;
+}
+/* line 53, ../scss/_modules/_board.scss */
+div.board ul li span.colour.pink {
+  background-color: darkorchid;
+}
+/* line 57, ../scss/_modules/_board.scss */
+div.board ul li span.colour.red {
+  background-color: red;
+}
+/* line 61, ../scss/_modules/_board.scss */
+div.board ul li span.colour.yellow {
+  background-color: yellow;
+}
+/* line 65, ../scss/_modules/_board.scss */
+div.board ul li span.colour.green {
+  background-color: green;
+}
+/* line 69, ../scss/_modules/_board.scss */
+div.board ul li span.colour.indigo {
+  background-color: blue;
+}
+/* line 73, ../scss/_modules/_board.scss */
+div.board ul li span.colour.black {
+  background-color: black;
+}
+/* line 78, ../scss/_modules/_board.scss */
+div.board ul li span.price {
+  display: block;
+  clear: both;
+  margin-top: 5px;
+}
+/* line 86, ../scss/_modules/_board.scss */
+div.board ul li.property span.colour.black {
+  display: block;
+}
+/* line 94, ../scss/_modules/_board.scss */
+div.board ul li.chance div.content, div.board ul li.community_chest div.content {
+  margin-top: 20px;
+}
+/* line 100, ../scss/_modules/_board.scss */
+div.board ul li.tax div.content {
+  margin-top: 10px;
+}
+/* line 107, ../scss/_modules/_board.scss */
+div.board ul.bottom, div.board ul.top {
+  position: absolute;
+  bottom: 0;
+}
+/* line 112, ../scss/_modules/_board.scss */
+div.board ul.top {
+  bottom: auto;
+  top: 0;
+}
+/* line 116, ../scss/_modules/_board.scss */
+div.board ul.top li {
+  transform: rotate(180deg);
+}
+/* line 120, ../scss/_modules/_board.scss */
+div.board ul.top li.top_left div.content {
+  transform: rotate(305deg);
+  margin-top: 25px;
+}
+/* line 127, ../scss/_modules/_board.scss */
+div.board ul.top li.top_right div.content {
+  transform: rotate(45deg);
+  margin-top: 25px;
+}
+/* line 138, ../scss/_modules/_board.scss */
+div.board ul.bottom li.bottom_left div.content {
+  transform: rotate(45deg);
+  margin-top: 20px;
+}
+/* line 145, ../scss/_modules/_board.scss */
+div.board ul.bottom li.bottom_right div.content {
+  transform: rotate(-45deg);
+  margin-top: 25px;
+}
+/* line 154, ../scss/_modules/_board.scss */
+div.board ul.left, div.board ul.right {
+  position: absolute;
+  left: 0;
+  margin-top: 70px;
+}
+/* line 159, ../scss/_modules/_board.scss */
+div.board ul.left li, div.board ul.right li {
+  float: none;
+  width: 60px;
+  height: 68px;
+  transform: rotate(90deg);
+  height: 60px;
+  width: 68px;
+}
+/* line 169, ../scss/_modules/_board.scss */
+div.board ul.right {
+  left: auto;
+  right: 0;
+}
+/* line 173, ../scss/_modules/_board.scss */
+div.board ul.right li {
+  transform: rotate(270deg);
 }
