--- a/public/scss/_variables.scss
+++ b/public/scss/_variables.scss
@@ -1,5 +1,7 @@
-$tile_width: 60px;
-$tile_height: 68px;
+$tile_width: 70px;
+$tile_height: 80px;
+
+$board_colour: #DCEDDA;
 
 $jail_colour: transparent;
 $sky_blue_colour: #87CEEB;
@@ -17,3 +19,9 @@ $yellow_colour: #FFFF00;
 $go_to_jail_colour: transparent;
 $green_colour: #008000;
 $indigo_colour: #0000FF;
+
+$house_colour: green;
+$hotel_colour: red;
+
+$chance_background_colour: #FD9B78;
+$community_chest_background_colour: #FEF19A;
