Facebook auth complete

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 extends layout
 
-block board
+block content
 	div.board
 		div.chance
 			h1 Chance
@@ -38,3 +38,9 @@ block board
 						span.title #{tile.name}
 						if tile.price != 0
 							span.price £#{tile.price}
+	if user
+		div.logout
+			a(href="/auth/logout") Logout
+	else
+		div.login
+			a(href="/auth/facebook") Login with Facebook
