--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype 5
 html
-  head
-    title #{title}
-    link(rel='stylesheet', href='/css/screen.css')
-  body
-    block board
+	head
+		title #{title}
+		link(rel='stylesheet', href='/css/screen.css')
+	body
+		block content
