Uniform callbacks and Twitter authentication

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,3 +5,11 @@ html
 		link(rel='stylesheet', href='/css/screen.css')
 	body
 		block content
+		if user
+			div.logout
+				a(href="/auth/logout") Logout
+		else
+			div.login
+				a(href="/auth/facebook") Login with Facebook
+				br
+				a(href="/auth/twitter") Login with Twitter
