Creation of games started

--- a/public/scss/_elements.scss
+++ b/public/scss/_elements.scss
@@ -3,6 +3,12 @@ body {
 	margin: 0;
 	background-color: #fff;
 
+	div.clear {
+		width: 100%;
+		height: 1px;
+		clear: both;
+	}
+
 	ul {
 		margin: 0;
 		padding: 0;
