--- a/public/scss/_variables.scss
+++ b/public/scss/_variables.scss
@@ -1,6 +1,10 @@
 $tile_width: 70px;
 $tile_height: 80px;
 
+$controls_margin_left: 30px;
+$controls_width: 380px;
+$controls_padding: 10px;
+
 $board_colour: #DCEDDA;
 
 $jail_colour: transparent;
