--- a/public/scss/screen.scss
+++ b/public/scss/screen.scss
@@ -1,4 +1,7 @@
 @import 'variables';
 @import 'normalize';
 @import 'elements';
+@import '_modules/container';
 @import '_modules/board';
+@import '_modules/controls';
+@import '_modules/form';
