--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -451,14 +451,29 @@ body {
   background-color: #fff;
 }
 /* line 6, ../scss/_elements.scss */
+body div.clear {
+  width: 100%;
+  height: 1px;
+  clear: both;
+}
+/* line 12, ../scss/_elements.scss */
 body ul {
   margin: 0;
   padding: 0;
 }
-/* line 10, ../scss/_elements.scss */
+/* line 16, ../scss/_elements.scss */
 body ul li {
   margin: 0;
   padding: 0;
+}
+
+/* line 1, ../scss/_modules/_container.scss */
+div.container {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  width: 1224px;
+  margin-bottom: 20px;
 }
 
 /* line 1, ../scss/_modules/_board.scss */
@@ -466,9 +481,9 @@ div.board {
   position: relative;
   height: 812px;
   width: 792px;
-  margin: 20px auto;
   background-color: #dcedda;
   box-shadow: 3px 3px 10px #888;
+  float: left;
 }
 /* line 9, ../scss/_modules/_board.scss */
 div.board ul {
@@ -670,4 +685,44 @@ div.board div.community_chest {
   top: 160px;
   left: 100px;
   background-color: #fef19a;
+}
+
+/* line 1, ../scss/_modules/_controls.scss */
+div.controls {
+  float: left;
+  width: 380px;
+  padding: 10px;
+  margin-left: 30px;
+  border: 1px solid #000;
+  position: relative;
+}
+/* line 9, ../scss/_modules/_controls.scss */
+div.controls div.logout {
+  top: 10px;
+  right: 10px;
+  position: absolute;
+}
+/* line 16, ../scss/_modules/_controls.scss */
+div.controls h1,
+div.controls h2 {
+  width: auto;
+}
+/* line 20, ../scss/_modules/_controls.scss */
+div.controls h1 {
+  font-size: 130%;
+}
+/* line 24, ../scss/_modules/_controls.scss */
+div.controls h2 {
+  font-size: 120%;
+}
+
+/* line 2, ../scss/_modules/_form.scss */
+form div.field {
+  width: 100%;
+  margin-bottom: 20px;
+}
+/* line 6, ../scss/_modules/_form.scss */
+form div.field label {
+  display: block;
+  margin-bottom: 5px;
 }
