--- a/public/scss/_modules/_form.scss
+++ b/public/scss/_modules/_form.scss
@@ -1,7 +1,16 @@
 form {
+	div.errors {
+		margin-bottom: 10px;
+		color: red;
+
+		ul {
+			list-style-type: none;
+		}
+	}
+
 	div.field {
 		width: 100%;
-		margin-bottom: 20px;
+		margin-bottom: 10px;
 
 		label {
 			display: block;
