--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,21 +25,24 @@ html
 							div.start
 								h2 Start game
 								form(action='/', method='post')
-									div.message
-
+									if errors !== null
+										div.errors
+											ul
+												for error, key in errors
+													li #{error.msg}
 									div.field
 										label(for='num_players') Number of players
 										select#num_players(name="num_players")
 											option(value="") --Select--
-											option(value="2") 2
-											option(value="3") 3
-											option(value="4") 4
+											option(value="2", selected=num_players == 2) 2
+											option(value="3", selected=num_players == 3) 3
+											option(value="4", selected=num_players == 4) 4
 									div.field
 										label(for='your_piece') Your piece
 										select#your_piece(name="your_piece")
 											option(value="") --Select--
 											each piece, key in pieces
-												option(value=piece.machine_name) #{piece.name}
+												option(value=piece.machine_name, selected=your_piece == piece.machine_name) #{piece.name}
 									div.submit
 										input(type='hidden', name='_csrf', value="#{token}")
 										button.btn(type='submit') Start
