--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -449,19 +449,20 @@ body {
   padding: 0;
   margin: 0;
   background-color: #fff;
+  overflow-y: hidden;
 }
-/* line 6, ../scss/_elements.scss */
+/* line 7, ../scss/_elements.scss */
 body div.clear {
   width: 100%;
   height: 1px;
   clear: both;
 }
-/* line 12, ../scss/_elements.scss */
+/* line 13, ../scss/_elements.scss */
 body ul {
   margin: 0;
   padding: 0;
 }
-/* line 16, ../scss/_elements.scss */
+/* line 17, ../scss/_elements.scss */
 body ul li {
   margin: 0;
   padding: 0;
@@ -472,15 +473,15 @@ div.container {
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
-  width: 1334px;
+  width: 1224px;
   margin-bottom: 20px;
 }
 
 /* line 1, ../scss/_modules/_board.scss */
 div.board {
   position: relative;
-  height: 902px;
-  width: 902px;
+  height: 792px;
+  width: 792px;
   background-color: #dcedda;
   box-shadow: 3px 3px 10px #888;
   float: left;
@@ -498,10 +499,10 @@ div.board ul li {
   font-size: 65%;
   text-align: center;
   word-wrap: break-word;
-  width: 80px;
-  max-width: 80px;
-  max_height: 80px;
-  height: 80px;
+  width: 70px;
+  max-width: 70px;
+  max_height: 70px;
+  height: 70px;
   position: relative;
 }
 /* line 26, ../scss/_modules/_board.scss */
@@ -586,7 +587,7 @@ div.board ul li.property span.colour.black {
 }
 /* line 121, ../scss/_modules/_board.scss */
 div.board ul li.chance div.content, div.board ul li.community_chest div.content {
-  margin-top: 30px;
+  margin-top: 25px;
 }
 /* line 127, ../scss/_modules/_board.scss */
 div.board ul li.tax div.content {
@@ -614,7 +615,7 @@ div.board ul.top li {
 }
 /* line 153, ../scss/_modules/_board.scss */
 div.board ul.top li.top_left div.content {
-  transform: rotate(305deg);
+  transform: rotate(315deg);
   margin-top: 30px;
 }
 /* line 160, ../scss/_modules/_board.scss */
@@ -625,7 +626,7 @@ div.board ul.top li.top_right div.content {
 /* line 171, ../scss/_modules/_board.scss */
 div.board ul.bottom li.bottom_left div.content {
   transform: rotate(45deg);
-  margin-top: 25px;
+  margin-top: 22px;
 }
 /* line 178, ../scss/_modules/_board.scss */
 div.board ul.bottom li.bottom_right div.content {
@@ -636,15 +637,15 @@ div.board ul.bottom li.bottom_right div.content {
 div.board ul.left, div.board ul.right {
   position: absolute;
   left: 0;
-  margin-top: 82px;
+  margin-top: 72px;
 }
 /* line 192, ../scss/_modules/_board.scss */
 div.board ul.left li, div.board ul.right li {
   float: none;
-  width: 80px;
+  width: 70px;
   transform: rotate(90deg);
-  height: 80px;
-  width: 80px;
+  height: 70px;
+  width: 70px;
 }
 /* line 201, ../scss/_modules/_board.scss */
 div.board ul.right {
