--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,45 +5,5 @@ html
 		link(rel='stylesheet', href='/css/screen.css')
 	body		
 		div.container
-			block board
-			div.controls
-				h1 MonopolyJs
-				div.user
-					if user
-						div.logout
-							a(href="/auth/logout") Logout
-					else
-						div.login
-							a(href="/auth/facebook") Login with Facebook
-							br
-							a(href="/auth/twitter") Login with Twitter
-				if user					
-					div.game
-						if game
-							div.players
-						else
-							div.start
-								h2 Start game
-								form(action='/', method='post')
-									if errors !== null
-										div.errors
-											ul
-												for error, key in errors
-													li #{error.msg}
-									div.field
-										label(for='num_players') Number of players
-										select#num_players(name="num_players")
-											option(value="") --Select--
-											option(value="2", selected=num_players == 2) 2
-											option(value="3", selected=num_players == 3) 3
-											option(value="4", selected=num_players == 4) 4
-									div.field
-										label(for='your_piece') Your piece
-										select#your_piece(name="your_piece")
-											option(value="") --Select--
-											each Piece, key in Pieces
-												option(value=Piece.get('machine_name'), selected=your_piece == Piece.get('machine_name')) #{Piece.get('name')}
-									div.submit
-										input(type='hidden', name='_csrf', value="#{token}")
-										button.btn(type='submit') Start
+			block content			
 			div.clear
