Population of models using ORM complete

--- a/views/includes/_controls.jade
+++ b/views/includes/_controls.jade
@@ -8,11 +8,11 @@ div.controls
 	if User					
 		div.game
 			if Game
-				if Game.get('players').length == Game.get('num_players')
+				if Game.get('_players').length == Game.get('num_players')
 					div.you
 				else
 					div.waiting
-						h2 Waiting for more players (#{Game.get('num_players') - Game.get('players').length})
+						h2 Waiting for more players (#{Game.get('num_players') - Game.get('_players').length})
 			else
 				include _create_game
 					
