--- a/public/scss/_normalize.scss
+++ b/public/scss/_normalize.scss
@@ -376,7 +376,7 @@ sub {
     menu,
     ol,
     ul {
-        margin: rhythm(1) 0;
+        //margin: rhythm(1) 0;
     }
 
     @if not $strict-normalize {
