--- a/views/includes/_create_game.jade
+++ b/views/includes/_create_game.jade
@@ -1,5 +1,5 @@
 div.start
-	h2 Start game
+	h2 Create new game
 	form(action='/', method='post')
 		if errors !== null
 			div.errors
@@ -7,18 +7,15 @@ div.start
 					for error, key in errors
 						li #{error.msg}
 		div.field
+			label(for='name') Name
+			input#name(name="name", value=name)
+		div.field
 			label(for='num_players') Number of players
 			select#num_players(name="num_players")
 				option(value="") --Select--
 				option(value="2", selected=num_players == 2) 2
 				option(value="3", selected=num_players == 3) 3
 				option(value="4", selected=num_players == 4) 4
-		div.field
-			label(for='your_piece') Your piece
-			select#your_piece(name="your_piece")
-				option(value="") --Select--
-				each Piece, key in Pieces
-					option(value=Piece.get('machine_name'), selected=your_piece == Piece.get('machine_name')) #{Piece.get('name')}
 		div.submit
 			input(type='hidden', name='_csrf', value="#{token}")
 			button.btn(type='submit') Start
