--- a/views/includes/games/_create.jade
+++ b/views/includes/games/_create.jade
@@ -1,12 +1,15 @@
 div.create(ng-controller="games.create")
 	h2 Create new game
 	form(name="createGameForm", ng-submit="submit()")
+		div.errors(ng-show="errors.length")
+			ul
+				li(ng-repeat="error in errors") {{error.msg}}
 		div.field
 			label(for='name') Name
-			input#name(ng-model="game.name")
+			input#name(ng-model="name")
 		div.field
 			label(for='num_players') Number of players
-			select#num_players(ng-model="game.num_players")
+			select#num_players(ng-model="num_players")
 				option(value="") --Select--
 				option(value="2") 2
 				option(value="3") 3
