Added placeholder text for games list

--- a/views/partials/gamesControls.jade
+++ b/views/partials/gamesControls.jade
@@ -6,8 +6,10 @@ div(class="games_controls", ng-controller="games")
 				span
 					a(href="/#/game/{{game._id}}") {{game.name}}
 					&nbsp;&dash; {{game.created_date}}
-			li(ng-show="!games.length")
+			li(ng-show="games.length === 0")
 				em No active games
+			li(ng-show="games === undefined")
+				em Loading
 	div.create
 		h2 Create new game
 		form(name="createGameForm", ng-submit="submit()")
